[package]
name = "ckbuilder"
version = "0.1.0"
edition = "2024"
description = "CKB developer toolkit — manage accounts, check balances, and build/sign/broadcast transactions on Nervos CKB"
license = "MIT"
repository = "https://github.com/totdking/CKBuilder"
keywords = ["ckb", "nervos", "blockchain", "crypto", "cli"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "ckb"
path = "src/main.rs"

[dependencies]
# for cli tools to interact and perform actions on the mock Ckb chain
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1.0.102"

# randomizing for test harness
rand = {version = "0.10.1", features = ["thread_rng"]}

# for Account generation
secp256k1 = { version = "0.31.1", features = ["recovery"] }
blake2b-rs = "0.2.0"

# for address generation from lockscript
hex = "0.4.3"
hex-literal = "0.4"
bech32 = "0.11.1"
molecule = "0.9.2"

# for CKB node RPC
reqwest = { version = "0.12", features = ["blocking", "json"] }
